ficxin-evaluation/src/App.scss
//  Login Component

.login-form-container {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translateX(-50%) translateY(-50%);
  padding: 2rem 4rem;
  
  * {
    display: block;
    font-size: 1em;
  }

  label {
    text-align: left;
    font-weight: 700;
    margin-bottom: 0.5rem;
  }

  input {
    margin-bottom: 2rem;
    padding: 0.6rem 0.4rem;
    border: 2px #EAECEE solid;
    border-radius: 2px;
    width: 300px;
  }

  a {
    text-decoration: none;

    button {
      text-decoration: none;
      font-weight: 700;
      width: 100%;
      color: #fff;
      background-color: #3498DB;
      padding: 1rem;
      border: none;
      border-radius: 2px;
  
      &:disabled {
        background-color: #AED6F1;
      }
    }
  }
}

// Search Component

.search-container {
  position: absolute;
  padding: 2rem 4rem;
  left: 50%;
  transform: translateX(-50%);
  font-size: 1em;
  width: fit-content;
  
  * {
    font-size: 1em;
  }

  label {
    display: block;
    text-align: left;
    font-weight: 700;
    margin-bottom: 0.5rem;
  }

  input {
    padding: 0.6rem 0.4rem;
    border: 2px #EAECEE solid;
    border-radius: 2px;
    width: 50vw;
  }

  button {
    padding: 0.6rem;
    margin-left: 0.4rem;
    font-weight: 700;
    color: #fff;
    background-color: #3498DB;
    border: 2px #3498DB solid;
    border-radius: 2px;
  }

  section {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    margin-top: 2rem;
    cursor: pointer;

    img {
      height: 100px;
      width: 100px;
      background-size: contain;
      border-radius: 50%;
      border: 2px #3498DB solid;
    }
  
    ul {
      margin: 0;
      text-align: left;
      list-style-type: none;
      display: inline-block;
    }
  }
}

// Image Modal

#modal {
  position: relative;
  z-index: 10000;
}

.modal {
  background-color: rgba(0,0,0,0.7);
  position: fixed;
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  display: flex;
  align-items: center;
  justify-content: center;

  section {
    position: relative;
    
    img {
      height: 60vh;
      width: 60vw;
      background-size: contain;
    }
  
    button {
      cursor: pointer;
      position: absolute;
      top: 0;
      right: 0;
      background-color: transparent;
      color: white;
      border: none;
      font-size: 2em;
      padding: 0.2rem 0.6rem;
    }
  }
}

